# Pthreads-x64

./: .gitignore  CMakeLists.txt  LICENSE  README.md  jenkinsFile  pthread.h  pthread.sln  pthread.vcxproj  pthread.vcxproj.filters  version.rc
headers/: pthread_base.h.in  sched.h
scripts/: buildPthread.bat  buildPthreads.bat  compressAndUploadPthreads.bat  installPthreads.bat
sources/: version.rc
